I think issue was caused by clicking link from messenger. Also, fixed skills spacing.

--- a/src/index.css
+++ b/src/index.css
@@ -4,18 +4,6 @@
   --white: #fff;
  }
 
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-
-.main {
-  flex-grow: 1;
-  overflow: hidden;
-  overflow-y: auto;
-}
-
 html,
 body {
   background-image: url('./assets/images/hero-bg.jpg');
@@ -89,7 +77,6 @@ button[disabled] {
 
 .skills {
   font-size: 18px;
-  padding-left: 20px;
   font-weight: bold;
 }
 
